# Spine

./: .gitignore  .spine.toml  CODEOWNERS  Cargo.toml  Claude.md  README.md  spine_completion.bash  test_progress.sh
src/: angular.rs  angular_cli.rs  cli.rs  completion.rs  config.rs  error.rs  main.rs  npm.rs  package.rs  platform.rs  scanner.rs  tui.rs  workspace.rs
