[package]
name = "spine"
version = "0.1.0"
edition = "2021"
description = "A modern replacement for npm link with interactive configuration management"
license = "MIT"

[[bin]]
name = "spine"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
dirs = "5.0"
indicatif = "0.17"